--- a/notebook/1_3_numpy.ipynb
+++ b/notebook/1_3_numpy.ipynb
@@ -130,6 +130,42 @@
      "base_uri": "https://localhost:8080/"
     },
     "executionInfo": {
+     "elapsed": 3,
+     "status": "ok",
+     "timestamp": 1718432112639,
+     "user": {
+      "displayName": "毛利拓也",
+      "userId": "17854120745961292401"
+     },
+     "user_tz": -540
+    },
+    "id": "ieXR_Yuch2n9",
+    "outputId": "372c3260-7489-4b53-8a99-476649bd86a5"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
      "elapsed": 269,
      "status": "ok",
      "timestamp": 1718432038459,
@@ -149,18 +185,19 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 連番でNumPy配列を作成\n",
     "np.arange(12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -187,12 +224,13 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# NumPy配列の形を変換\n",
     "arr = np.arange(12).reshape(3, 4)\n",
     "\n",
     "arr"
@@ -200,65 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 3,
-     "status": "ok",
-     "timestamp": 1718432112639,
-     "user": {
-      "displayName": "毛利拓也",
-      "userId": "17854120745961292401"
-     },
-     "user_tz": -540
-    },
-    "id": "ieXR_Yuch2n9",
-    "outputId": "372c3260-7489-4b53-8a99-476649bd86a5"
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(3, 4)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 2,
-     "status": "ok",
-     "timestamp": 1718432125173,
-     "user": {
-      "displayName": "毛利拓也",
-      "userId": "17854120745961292401"
-     },
-     "user_tz": -540
-    },
-    "id": "XLGusJGhiR4o",
-    "outputId": "b84eae78-f544-405f-909d-b3fee671f3bd"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
       ]
      },
      "execution_count": 7,
@@ -267,7 +253,7 @@
     }
    ],
    "source": [
-    "arr.ndim"
+    "arr.shape"
    ]
   },
   {
@@ -459,42 +445,6 @@
      "base_uri": "https://localhost:8080/"
     },
     "executionInfo": {
-     "elapsed": 249,
-     "status": "ok",
-     "timestamp": 1718433006958,
-     "user": {
-      "displayName": "毛利拓也",
-      "userId": "17854120745961292401"
-     },
-     "user_tz": -540
-    },
-    "id": "ZtfCeqJrjY22",
-    "outputId": "aa2db17b-49a4-4602-b98d-bbb3ff38260d"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
      "elapsed": 277,
      "status": "ok",
      "timestamp": 1718433023361,
@@ -514,13 +464,13 @@
        "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr[0, 1]"
+    "arr[0, 1] # arr[0][1]でも可能"
    ]
   },
   {
@@ -543,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +504,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -590,7 +540,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -626,7 +576,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -666,7 +616,7 @@
        "        True,  True,  True])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -703,7 +653,7 @@
        "array([ 4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -740,7 +690,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -776,7 +726,7 @@
        "(12,)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -823,24 +773,39 @@
        "       [11]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1次元を2次元に変更\n",
-    "arr[:, np.newaxis]"
+    "arr2 = arr[:, np.newaxis]\n",
+    "\n",
+    "arr2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "fjwZSrj4kpHG"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2.shape"
+   ]
   },
   {
    "cell_type": "markdown",
