--- a/notebook/1_5_scikit-learn.ipynb
+++ b/notebook/1_5_scikit-learn.ipynb
@@ -109,7 +109,8 @@
      },
      "user_tz": -540
     },
-    "id": "cmC4NuJ5GNfo"
+    "id": "cmC4NuJ5GNfo",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -134,13 +135,16 @@
      },
      "user_tz": -540
     },
-    "id": "Act_N5czv45Z"
+    "id": "Act_N5czv45Z",
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "# # listをNumPyに変換\n",
     "# X = np.array(X)\n",
-    "# y = np.array(y)"
+    "# y = np.array(y)\n",
+    "# print(X)\n",
+    "# print(y)"
    ]
   },
   {
