--- a/notebook/2_1_boston_EDA.ipynb
+++ b/notebook/2_1_boston_EDA.ipynb
@@ -217,19 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 343,
-     "status": "ok",
-     "timestamp": 1718850308064,
-     "user": {
-      "displayName": "毛利拓也",
-      "userId": "17854120745961292401"
-     },
-     "user_tz": -540
-    },
-    "id": "ODZcxDaqVyAp"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -326,6 +314,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 相関係数\n",
+    "df.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -346,7 +344,7 @@
    },
    "outputs": [],
    "source": [
-    "# 相関係数\n",
+    "# 相関係数のヒートマップ\n",
     "plt.figure(figsize=(12, 10))\n",
     "df_corr = df.corr()\n",
     "sns.heatmap(df_corr, vmax=1, vmin=-1, center=0, annot=True, cmap = 'Blues')"
@@ -377,7 +375,7 @@
    "source": [
     "# 散布図\n",
     "num_cols = ['RM', 'LSTAT', 'MEDV']\n",
-    "sns.pairplot(df[num_cols], size=2.5)"
+    "sns.pairplot(df[num_cols], height=2.5)"
    ]
   },
   {
@@ -386,6 +384,13 @@
    "metadata": {
     "id": "-kUbFmn-Mqa5"
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
